--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -1,6 +1,6 @@
 <div class="page-top clearfix" baScrollPosition maxHeight="50" (scrollChange)="scrolledChanged($event)"
      [ngClass]="{scrolled: isScrolled}">
-  <a routerLink="/pages/dashboard" class="al-logo clearfix"><span>ng2-</span>admin</a>
+  <a routerLink="/pages/dashboard" class="al-logo clearfix"><span>Chat-</span>Stir</a>
   <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"></a>
 
   <div class="search">
@@ -11,14 +11,13 @@
   <div class="user-profile clearfix">
     <div class="dropdown al-user-profile">
       <a class="profile-toggle-link dropdown-toggle" id="user-profile-dd" data-toggle="dropdown" aria-expanded="false">
-        <img src="{{ ( 'Nasta' | baProfilePicture ) }}">
+        <img src={{user.thumb_avatar}}>
       </a>
       <ul class="dropdown-menu top-dropdown-menu profile-dropdown" aria-labelledby="user-profile-dd">
-        <li class="dropdown-item"><a href><i class="fa fa-user"></i>Profile</a></li>
-        <li class="dropdown-item"><a href><i class="fa fa-cog"></i>Settings</a></li>
-        <li class="dropdown-item"><a href class="signout"><i class="fa fa-power-off"></i>Sign out</a></li>
+        <!-- <li class="dropdown-item"><a href><i class="fa fa-user"></i>Profile</a></li> -->
+        <!-- <li class="dropdown-item"><a href><i class="fa fa-cog"></i>Settings</a></li> -->
+        <li class="dropdown-item"><a href class="signout" (click)="signOut()"><i class="fa fa-power-off"></i>Sign out</a></li>
       </ul>
     </div>
-    <ba-msg-center></ba-msg-center>
   </div>
 </div>
