Added form to area builder

--- a/src/app/pages/areas/components/areaBuilder/areaBuilder.component.html
+++ b/src/app/pages/areas/components/areaBuilder/areaBuilder.component.html
@@ -2,3 +2,13 @@
 <ba-card title="Area Builder">
   <div class="google-maps"></div>
 </ba-card>
+
+<div class="widget">
+  <div class="row">
+    <div class="col-md-12">
+      <ba-card title="Inline Form" baCardClass="with-scroll">
+        <inline-form></inline-form>
+      </ba-card>
+    </div>
+  </div>
+</div>
