--- a/src/app/pages/areas/components/areaBuilder/areaBuilder.component.html
+++ b/src/app/pages/areas/components/areaBuilder/areaBuilder.component.html
@@ -5,9 +5,16 @@
 
 <div class="widget">
   <div class="row">
-    <div class="col-md-12">
-      <ba-card title="Inline Form" baCardClass="with-scroll">
+    <div class="col-md-6">
+      <ba-card title="Create Area" baCardClass="with-scroll">
         <inline-form></inline-form>
+      </ba-card>
+    </div>
+  <!-- </div>
+  <div class="row"> -->
+    <div class="col-md-6">
+      <ba-card title="Picture Uploader" baCardClass="with-scroll">
+        <ba-picture-uploader [picture]="profile.picture" [defaultPicture]="defaultPicture" [uploaderOptions]="uploaderOptions"></ba-picture-uploader>
       </ba-card>
     </div>
   </div>
