--- a/src/app/pages/areas/components/areaBuilder/components/inlineForm/inlineForm.html
+++ b/src/app/pages/areas/components/areaBuilder/components/inlineForm/inlineForm.html
@@ -1,11 +1,33 @@
-<form class="row form-inline">
-  <div class="form-group col-sm-3">
-    <input type="text" class="form-control" id="exampleInputName2" placeholder="Name">
-  </div>
-  <div class="form-group col-sm-3">
-    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email">
+<form class="row form-inline" id="areaForm">
+  <div class="form-group col-sm-4">
+    <input type="text" class="form-control" id="exampleInputName2" placeholder="title" name="area[title]">
   </div>
   <div class="form-group">
+	  <select class="form-control" id="exampleSelect1">
+	    <option>L0</option>
+	    <option>L1</option>
+	    <option>L2</option>
+	    <option>L3</option>
+	  </select>	
+	</div>
+<!--   <div class="form-group col-sm-3">
+	  <select multiple class="form-control" id="exampleSelect2">
+	    <option>Business</option>
+	    <option>Library</option>
+	    <option>Museum</option>
+	    <option>Other</option>
+	  </select>	
+	</div> -->
+  <div class="form-group col-sm-1" [hidden]="hideInput">
+  	<div *ngFor="let point of inputs">
+			<p>
+				{{point[0].toString() + ', ' + point[1].toString() }}
+			</p>
+  	</div>
+    <!-- <input type="text" class="form-control" id="exampleInputName2" placeholder="title"> -->
+  </div>
+
+  <div class="form-group col-sm-1">
     <button type="submit" class="btn btn-primary">Create Area</button>
   </div>
 </form>
