--- a/src/app/pages/areas/components/areaBuilder/components/inlineForm/inlineForm.html
+++ b/src/app/pages/areas/components/areaBuilder/components/inlineForm/inlineForm.html
@@ -1,6 +1,10 @@
-<form class="row form-inline" id="areaForm">
-  <div class="form-group col-sm-4">
-    <input type="text" class="form-control" id="exampleInputName2" placeholder="title" name="area[title]">
+<!-- 
+<form [formGroup]="createAreaForm" (ngSubmit)="onSubmit()" class="row form-inline" >
+  <div class="form-group row" [ngClass]="{'has-error': (!title.valid && title.touched), 'has-success': (title.valid && title.touched)}">
+    <label for="inputEmail3" class="col-sm-2 control-label" >title</label>
+    <div class="col-sm-2">
+      <input [formControl]="title" type="title" class="form-control" id="inputEmail3">
+    </div>
   </div>
   <div class="form-group">
 	  <select class="form-control" id="exampleSelect1">
@@ -10,24 +14,57 @@
 	    <option>L3</option>
 	  </select>	
 	</div>
-<!--   <div class="form-group col-sm-3">
+  <div class="form-group col-sm-3">
 	  <select multiple class="form-control" id="exampleSelect2">
 	    <option>Business</option>
 	    <option>Library</option>
 	    <option>Museum</option>
 	    <option>Other</option>
 	  </select>	
-	</div> -->
-  <div class="form-group col-sm-1" [hidden]="hideInput">
+	</div>
+  <div class="form-group col-sm-2" [hidden]="hideInput">
   	<div *ngFor="let point of inputs">
 			<p>
-				{{point[0].toString() + ', ' + point[1].toString() }}
+				{{point[0].toFixed(2).toString() + ', ' + point[1].toFixed(2).toString() }}
 			</p>
   	</div>
-    <!-- <input type="text" class="form-control" id="exampleInputName2" placeholder="title"> -->
   </div>
+  <div class="form-group row">
+    <div class="offset-sm-2 col-sm-10">
+      <button [disabled]="!createAreaForm.valid" type="submit" class="btn btn-default btn-auth" translate>Create area</button>
+    </div>
+  </div>
+</form>
+ -->
 
+
+
+
+<form [formGroup]="createAreaForm" (ngSubmit)="onSubmit()" class="row form-inline">
+  <div class="form-group col-sm-3">
+    <input type="text" #refTitle class="form-control" placeholder="Title" formControlName="title" >
+    <div *ngIf="createAreaForm.controls['title'].hasError('required')" class="alert alert-danger">Enter a name</div>
+  </div>
   <div class="form-group col-sm-1">
-    <button type="submit" class="btn btn-primary">Create Area</button>
+	  <select type="select" class="form-control" formControlName="level">
+	    <option value=""></option>
+	    <option value="L0">L0</option>
+	    <option value="L1">L1</option>
+	    <option value="L2">L2</option>
+	    <option value="L3">L3</option>
+	  </select>	
+	</div>
+  	<div *ngIf="area_profile.value == ''" class="form-group col-sm-3">
+    	<input type="text" class="form-control" id="input05" placeholder="Make an Area on the Map" disabled>
+    </div>
+  <div class="form-group col-sm-3" [hidden]="hideInput">
+  	<div *ngFor="let point of inputs">
+			<p>
+				{{point[0].toFixed(2).toString() + ', ' + point[1].toFixed(2).toString() }}
+			</p>
+  	</div>
+  </div>
+  <div class="form-group">
+    <button type="submit" [disabled]="!createAreaForm.valid	" class="btn btn-primary">{{createAreaForm.valid ? "Create Area" : "false"}}</button>
   </div>
 </form>
